// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing PostLoadIndicator Component renders as expected 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PostLoadIndicator />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <PlaceholderContainer
        animatedComponent={
          <LinearGradient
            colors={
              Array [
                "#eee",
                "#ddd",
                "#eee",
              ]
            }
            end={
              Object {
                "x": 0,
                "y": 0,
              }
            }
            start={
              Object {
                "x": 1,
                "y": 0,
              }
            }
            style={
              Object {
                "flex": 1,
                "width": 125,
              }
            }
          />
        }
        delay={1000}
        duration={1000}
      >
        <BarIndicator
          delay={0}
        />
      </PlaceholderContainer>,
      "scrollEnabled": false,
      "virtual": undefined,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "animatedComponent": <LinearGradient
          colors={
            Array [
              "#eee",
              "#ddd",
              "#eee",
            ]
          }
          end={
            Object {
              "x": 0,
              "y": 0,
            }
          }
          start={
            Object {
              "x": 1,
              "y": 0,
            }
          }
          style={
            Object {
              "flex": 1,
              "width": 125,
            }
          }
        />,
        "children": Array [
          <BarIndicator
            delay={0}
          />,
        ],
        "delay": 1000,
        "duration": 1000,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "0",
          "nodeType": "class",
          "props": Object {
            "delay": 0,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <PlaceholderContainer
          animatedComponent={
            <LinearGradient
              colors={
                Array [
                  "#eee",
                  "#ddd",
                  "#eee",
                ]
              }
              end={
                Object {
                  "x": 0,
                  "y": 0,
                }
              }
              start={
                Object {
                  "x": 1,
                  "y": 0,
                }
              }
              style={
                Object {
                  "flex": 1,
                  "width": 125,
                }
              }
            />
          }
          delay={1000}
          duration={1000}
        >
          <BarIndicator
            delay={0}
          />
        </PlaceholderContainer>,
        "scrollEnabled": false,
        "virtual": undefined,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "animatedComponent": <LinearGradient
            colors={
              Array [
                "#eee",
                "#ddd",
                "#eee",
              ]
            }
            end={
              Object {
                "x": 0,
                "y": 0,
              }
            }
            start={
              Object {
                "x": 1,
                "y": 0,
              }
            }
            style={
              Object {
                "flex": 1,
                "width": 125,
              }
            }
          />,
          "children": Array [
            <BarIndicator
              delay={0}
            />,
          ],
          "delay": 1000,
          "duration": 1000,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "0",
            "nodeType": "class",
            "props": Object {
              "delay": 0,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Testing PostLoadIndicator Component renders as expected in multiple 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PostLoadIndicator
    multiple={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <PlaceholderContainer
        animatedComponent={
          <LinearGradient
            colors={
              Array [
                "#eee",
                "#ddd",
                "#eee",
              ]
            }
            end={
              Object {
                "x": 0,
                "y": 0,
              }
            }
            start={
              Object {
                "x": 1,
                "y": 0,
              }
            }
            style={
              Object {
                "flex": 1,
                "width": 125,
              }
            }
          />
        }
        delay={1000}
        duration={1000}
      >
        <BarIndicator
          delay={40}
        />
        <BarIndicator
          delay={80}
        />
        <BarIndicator
          delay={120}
        />
        <BarIndicator
          delay={160}
        />
        <BarIndicator
          delay={200}
        />
        <BarIndicator
          delay={240}
        />
        <BarIndicator
          delay={280}
        />
        <BarIndicator
          delay={320}
        />
        <BarIndicator
          delay={360}
        />
        <BarIndicator
          delay={400}
        />
        <BarIndicator
          delay={440}
        />
        <BarIndicator
          delay={480}
        />
        <BarIndicator
          delay={520}
        />
        <BarIndicator
          delay={560}
        />
        <BarIndicator
          delay={600}
        />
        <BarIndicator
          delay={640}
        />
      </PlaceholderContainer>,
      "scrollEnabled": false,
      "virtual": undefined,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "animatedComponent": <LinearGradient
          colors={
            Array [
              "#eee",
              "#ddd",
              "#eee",
            ]
          }
          end={
            Object {
              "x": 0,
              "y": 0,
            }
          }
          start={
            Object {
              "x": 1,
              "y": 0,
            }
          }
          style={
            Object {
              "flex": 1,
              "width": 125,
            }
          }
        />,
        "children": Array [
          <BarIndicator
            delay={40}
          />,
          <BarIndicator
            delay={80}
          />,
          <BarIndicator
            delay={120}
          />,
          <BarIndicator
            delay={160}
          />,
          <BarIndicator
            delay={200}
          />,
          <BarIndicator
            delay={240}
          />,
          <BarIndicator
            delay={280}
          />,
          <BarIndicator
            delay={320}
          />,
          <BarIndicator
            delay={360}
          />,
          <BarIndicator
            delay={400}
          />,
          <BarIndicator
            delay={440}
          />,
          <BarIndicator
            delay={480}
          />,
          <BarIndicator
            delay={520}
          />,
          <BarIndicator
            delay={560}
          />,
          <BarIndicator
            delay={600}
          />,
          <BarIndicator
            delay={640}
          />,
        ],
        "delay": 1000,
        "duration": 1000,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "0",
          "nodeType": "class",
          "props": Object {
            "delay": 40,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "80",
          "nodeType": "class",
          "props": Object {
            "delay": 80,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "160",
          "nodeType": "class",
          "props": Object {
            "delay": 120,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "240",
          "nodeType": "class",
          "props": Object {
            "delay": 160,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "320",
          "nodeType": "class",
          "props": Object {
            "delay": 200,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "400",
          "nodeType": "class",
          "props": Object {
            "delay": 240,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "480",
          "nodeType": "class",
          "props": Object {
            "delay": 280,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "560",
          "nodeType": "class",
          "props": Object {
            "delay": 320,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "640",
          "nodeType": "class",
          "props": Object {
            "delay": 360,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "720",
          "nodeType": "class",
          "props": Object {
            "delay": 400,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "800",
          "nodeType": "class",
          "props": Object {
            "delay": 440,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "880",
          "nodeType": "class",
          "props": Object {
            "delay": 480,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "960",
          "nodeType": "class",
          "props": Object {
            "delay": 520,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "1040",
          "nodeType": "class",
          "props": Object {
            "delay": 560,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "1120",
          "nodeType": "class",
          "props": Object {
            "delay": 600,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "1200",
          "nodeType": "class",
          "props": Object {
            "delay": 640,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <PlaceholderContainer
          animatedComponent={
            <LinearGradient
              colors={
                Array [
                  "#eee",
                  "#ddd",
                  "#eee",
                ]
              }
              end={
                Object {
                  "x": 0,
                  "y": 0,
                }
              }
              start={
                Object {
                  "x": 1,
                  "y": 0,
                }
              }
              style={
                Object {
                  "flex": 1,
                  "width": 125,
                }
              }
            />
          }
          delay={1000}
          duration={1000}
        >
          <BarIndicator
            delay={40}
          />
          <BarIndicator
            delay={80}
          />
          <BarIndicator
            delay={120}
          />
          <BarIndicator
            delay={160}
          />
          <BarIndicator
            delay={200}
          />
          <BarIndicator
            delay={240}
          />
          <BarIndicator
            delay={280}
          />
          <BarIndicator
            delay={320}
          />
          <BarIndicator
            delay={360}
          />
          <BarIndicator
            delay={400}
          />
          <BarIndicator
            delay={440}
          />
          <BarIndicator
            delay={480}
          />
          <BarIndicator
            delay={520}
          />
          <BarIndicator
            delay={560}
          />
          <BarIndicator
            delay={600}
          />
          <BarIndicator
            delay={640}
          />
        </PlaceholderContainer>,
        "scrollEnabled": false,
        "virtual": undefined,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "animatedComponent": <LinearGradient
            colors={
              Array [
                "#eee",
                "#ddd",
                "#eee",
              ]
            }
            end={
              Object {
                "x": 0,
                "y": 0,
              }
            }
            start={
              Object {
                "x": 1,
                "y": 0,
              }
            }
            style={
              Object {
                "flex": 1,
                "width": 125,
              }
            }
          />,
          "children": Array [
            <BarIndicator
              delay={40}
            />,
            <BarIndicator
              delay={80}
            />,
            <BarIndicator
              delay={120}
            />,
            <BarIndicator
              delay={160}
            />,
            <BarIndicator
              delay={200}
            />,
            <BarIndicator
              delay={240}
            />,
            <BarIndicator
              delay={280}
            />,
            <BarIndicator
              delay={320}
            />,
            <BarIndicator
              delay={360}
            />,
            <BarIndicator
              delay={400}
            />,
            <BarIndicator
              delay={440}
            />,
            <BarIndicator
              delay={480}
            />,
            <BarIndicator
              delay={520}
            />,
            <BarIndicator
              delay={560}
            />,
            <BarIndicator
              delay={600}
            />,
            <BarIndicator
              delay={640}
            />,
          ],
          "delay": 1000,
          "duration": 1000,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "0",
            "nodeType": "class",
            "props": Object {
              "delay": 40,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "80",
            "nodeType": "class",
            "props": Object {
              "delay": 80,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "160",
            "nodeType": "class",
            "props": Object {
              "delay": 120,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "240",
            "nodeType": "class",
            "props": Object {
              "delay": 160,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "320",
            "nodeType": "class",
            "props": Object {
              "delay": 200,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "400",
            "nodeType": "class",
            "props": Object {
              "delay": 240,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "480",
            "nodeType": "class",
            "props": Object {
              "delay": 280,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "560",
            "nodeType": "class",
            "props": Object {
              "delay": 320,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "640",
            "nodeType": "class",
            "props": Object {
              "delay": 360,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "720",
            "nodeType": "class",
            "props": Object {
              "delay": 400,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "800",
            "nodeType": "class",
            "props": Object {
              "delay": 440,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "880",
            "nodeType": "class",
            "props": Object {
              "delay": 480,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "960",
            "nodeType": "class",
            "props": Object {
              "delay": 520,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "1040",
            "nodeType": "class",
            "props": Object {
              "delay": 560,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "1120",
            "nodeType": "class",
            "props": Object {
              "delay": 600,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "1200",
            "nodeType": "class",
            "props": Object {
              "delay": 640,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
